# jp-ndb-medicine

./: README.md  pyproject.toml
.github/workflows/: pytest.yml
jp_ndb_medicine/: _.py  __init__.py
tests/: test_.py
